Second Manuals check: Components now OK. Many typos corrected.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@206 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Component_manual.tex
+++ b/trunk/Component_manual.tex
@@ -161,7 +161,7 @@
 %\include{compcode}   % removed: too heavy !!
 %\include{instcode}
 %\include{test}       % contained instr_examples
-\include{random}
+%\include{random}
 \include{terms}       % as in manual
 
 \addcontentsline{toc}{chapter}{\protect\numberline{}{Bibliography}}
