--- a/trunk/Single_crystal.tex
+++ b/trunk/Single_crystal.tex
@@ -417,7 +417,7 @@ If the user has choosen a fixed transmission probability $f({\rm
   transmit}) = p_{\rm transmit}$, the neutron weight must be adjusted by
 $$ \pi({\rm transmit}) = \frac{P({\rm transmit})}{f({\rm transmit})}
 $$
-where $\P({\rm transmit}) = \exp(-\frac{\sigma_{\rm tot}}{V_0}\ell)$ is
+where $P({\rm transmit}) = \exp(-\frac{\sigma_{\rm tot}}{V_0}\ell)$ is
 the physical transmission probability. Likewise, for non-transmission
 the adjustment is
 $$ \pi({\rm no~transmission}) = \frac{1-P({\rm transmit})}{1-f({\rm transmit})}.
