--- a/trunk/filter.tex
+++ b/trunk/filter.tex
@@ -11,7 +11,7 @@ that changes the neutron flux according to a 1D input table (text file).
 {\bf Filter\_gen} may act as a source ($options$="set")
 or a filter ($options$="multiply", default mode).
 The table itself is a 2 column free format file which accept comment lines.
-The first table column represent wavevector, energy, or wavelength,
+The first table column represents wavevector, energy, or wavelength,
 as specified in the $options$ parameter,
 whereas the second column is the transmission/weight modifier.
 
