--- a/trunk/instrum.tex
+++ b/trunk/instrum.tex
@@ -44,7 +44,7 @@ The \verb+ILL_TOF_Env+ example is a simple neutron pulse (e.g. from a chopper sy
 
 \subsection{Neutron site: tests}
 
-This large set of examples shows simple instruments using particular components (samples, polarized beams, detectors). They may be used as starting point for further more complex descriptions.
+This large set of examples shows simple instruments using particular components (samples, polarized beams, detectors). They may be used as starting point for further more complex models.
 
 \subsection{Neutron site: ISIS}
 
