--- a/trunk/misc.tex
+++ b/trunk/misc.tex
@@ -57,7 +57,7 @@ computer crash. The achieved percentage of the simulation is stored in these tem
 data files. Technically, this save is equivalent to sending regularly
 a USR2 signal to the running simulation.
 
-The optional 'profile' parameter, when to a file name, will produce the number of statistical events reaching each component in the simulation. This may be used to identify positions where events are lost.
+The optional 'profile' parameter, when set to a file name, will produce the number of statistical events reaching each component in the simulation. This may be used to identify positions where events are lost.
 
 \section{Beam\_spy: A beam analyzer}
 \component{Beam\_spy}{System}{}{}{should overlap previous component}
