--- a/trunk/monochromator_curved.tex
+++ b/trunk/monochromator_curved.tex
@@ -42,7 +42,7 @@ can be modeled by a tabulated file $transmit$ (for non-reflected neutrons, \verb
 The most useful of these files for Monochromator\_curved are \verb+HOPG.rlf+ and \verb+HOPG.trm+.
 
 As for {\bf Monochromator\_flat}, the crystal is assumed to be infinitely
-thin, and the varition in lattice spacing, ($\Delta d/d$),
+thin, and the variation in lattice spacing, ($\Delta d/d$),
 is assumed to be zero. Hence, this
 component is not suitable for simulating backscattering instruments or to
 investigate multiple scattering effects.
