--- a/trunk/monochromator_flat.tex
+++ b/trunk/monochromator_flat.tex
@@ -93,7 +93,7 @@ Once $n$ has been determined, the Bragg angle $\theta$ can be
 computed. The angle $\alpha$ is the amount one would need to
 turn the nominal scattering vector ${\bf Q}_0$ for the monochromator
 to be in Bragg scattering condition.
-We now used $\alpha$ to compute the probability of reflection from
+We now use $\alpha$ to compute the probability of reflection from
 the mosaic crystal
 \begin{equation}
 p_{\rm reflect} = R_0 e^{-\alpha^2/2\eta^2},
