--- a/trunk/optics.tex
+++ b/trunk/optics.tex
@@ -35,7 +35,7 @@ in section~\ref{s:mirror}.
 \chapter{Moving optical components:
 Choppers and velocity selectors}
 We list in this chapter some moving optical components,
-like chopper, that may be used for TOF class instrument simulations,
+like choppers, that may be used for TOF class instrument simulations,
 and velocity selector used for partially monochromatize continuous beams.
 \index{Library!Components!optics}
 \index{Optics|textbf}
