--- a/trunk/preface_comp.tex
+++ b/trunk/preface_comp.tex
@@ -75,6 +75,7 @@ and benchmarking in simple cases}
   \end{itemize}
 \item{A suite of sample components}
   \begin{itemize}
+  \item \verb+Inelastic_Incoherent+ Inelastic incoherent sample with quasielastic and elastic contributions (K. Lefmann, Ris\o)
   \item \verb+Phonon_simple+ An isotropic acoustic phonon (K. Lefmann, Ris\o)
   \item \verb+PowderN+. N lines powder diffraction (P.K. Willendrup, Ris\o)
   \item \verb+Sans_spheres+ hard spheres in thin solution, mono disperse (L. Arleth, the Royal Veterinary and Agricultural University (DK), K. Lefmann, Ris\o )
