--- a/trunk/sans.tex
+++ b/trunk/sans.tex
@@ -10,7 +10,6 @@ The component {\bf Sans\_spheres} models a sample of small independent
 spheres of radius $R$, which are uniformly distributed
 in a rectangular volume $x_w \times y_h \times z_t$ with a volume
 fraction $\phi$. The absorption cross section density for the spheres
-(or is it from the solution?)
 is $\sigma_a$ (in units of m$^{-1}$), specified
 for neutrons at 2200 m/s. Absorption and incoherent scattering
 from the medium is neglected.
@@ -62,7 +61,7 @@ along the whole (unscattered) beam path with the sample, length $l_{\rm full}$, 
 $f_l = 1/l_{\rm full}$. The direction focusing on the detector gives
 (in an small angle approximation) $f_\Omega = d^2 / (\pi R_{\rm det}^2)$.
 
-Hence, the total weight tranformation factor becomes (more explanation to come)
+Hence, the total weight tranformation factor becomes % (more explanation to come)
 \begin{equation}
 \pi_j = l_{\rm full} (\pi R_{\rm det}^2 / d^2)/(4 \pi)
   n (\Delta\rho)^2 V^2 f(q) \exp(-\mu_a l) ,
