--- a/trunk/sources.tex
+++ b/trunk/sources.tex
@@ -6,7 +6,7 @@
 \index{Library!Components!sources}
 
 \MCS\ contains a number of different source components,
-and any simulation will contain exactly one of these sources.
+and any simulation will usually contain exactly one of these sources.
 The main function of a source is to determine a set of initial
 parameters $({\bf r}, {\bf v}, t)$
 for each neutron ray. This is done by Monte Carlo choices from
