--- a/trunk/tof_monitor.tex
+++ b/trunk/tof_monitor.tex
@@ -7,7 +7,7 @@ in the $(x,y)$ plane, given by the $x$ and $y$ parameters,
 like for {\bf Slit}.
 The neutron ray is propagated to the plane of the monitor
 by the kernel call PROP\_Z0.
-A neutron ray is counted if it passes within the rectangular opening 
+A neutron ray is counted if it passes within the rectangular opening
 given by the $x$ and $y$ limits.
 
 Special about {\bf TOF\_monitor} is that it is sensitive to
@@ -21,8 +21,8 @@ As usual in time-of-flight analysis, all times are given in units of $\mu$s.
 
 The output parameters from {\bf TOF\_monitor} are the three count numbers,
 $N, I$, and $M_2$ for the total counts in the monitor.
-In addition, a file, \verb+filename+, is produced with a list of 
+In addition, a file, \verb+filename+, is produced with a list of
 the same three data divided in different TOF bins.
-This file can be read and plotted by the {\rm MCplot} tool; see the
+This file can be read and plotted by the {\rm mcplot} tool; see the
 System Manual.
 
