--- a/trunk/virtual_input.tex
+++ b/trunk/virtual_input.tex
@@ -10,7 +10,7 @@ parameters have been stored by the component {\bf Virtual\_output}.
 
 All neutron ray parameters are read from the input file, which is by default
 of ``text'' type, but can also assume the binary formats
-``float'' and ``double''. The reading of neutron rays continue until the
+``float'' and ``double''. The reading of neutron rays continues until the
 specified number of rays have been simulated or
 till the file has been exhausted. If desirable, the input file
 can be reused a number of times, determined by the optional parameter
