--- a/trunk/virtual_output.tex
+++ b/trunk/virtual_output.tex
@@ -12,7 +12,7 @@ parameters by the component {\bf Virtual\_input}.
 
 All neutron ray parameters are saved to the output file, which is by default
 of ``text'' type, but can also assume the binary formats
-``float'' or ``double''. The storing of neutron rays continue until the
+``float'' or ``double''. The storing of neutron rays continues until the
 specified number of simulations have been performed.
 
 \verb+buffer-size+ may be used to limit the size of the output file, but
