--- a/trunk/arm.tex
+++ b/trunk/arm.tex
@@ -6,7 +6,7 @@
 The component {\bf Arm} is empty; is resembles an optical bench
 and has no effect on the neutron ray.
 The purpose of this component is only to provide a standard
-means of defining a local co-ordinate system within the instrument definition.
+means of defining a local coordinate system within the instrument definition.
 Other components may then be
 positioned relative to the {\bf Arm} component
 using the \MCS\ meta-language.
@@ -14,4 +14,4 @@ The use of {\rm Arm} components in the instrument definitions
 is not required but is recommended for clarity.
 {\bf Arm} has no input parameters.
 
-
+The first Arm instance in an instrument definition may be changed into a \verb+Progress_bar+ component in order to display on the fly the simulation progress, and possibly save intermediate results.
