--- a/trunk/collimator_radial.tex
+++ b/trunk/collimator_radial.tex
@@ -18,7 +18,7 @@ or with an exact model.
 The input parameters are the inner radius $radius$, the radial length $len$,
 the input and output window dimensions $w_1$, $h_1$, $w_2$, $h_2$,
 the number of Soller channels $nchan$
-(each of then being a single linear collimator) covering the angular interval
+(each of them being a single linear collimator) covering the angular interval
 [$\theta_{min}$, $\theta_{max}$] angle with respect to the $z$-axis.
 
 If the $divergence$ parameter is defined,
@@ -30,6 +30,7 @@ then the model is exact, and traces the neutron trajectory inside each Soller.
 The computing efficiency is then lowered by a factor 2.
 
 The component can be made oscillating with an amplitude of $roc$ times
-$\pm w_1$.
+$\pm w_1$, which supresses the channels shadow.
 
 As an alternative, you may use the {\bf Exact\_radial\_coll} contributed component.
+For a rectangular shaped collimator, instead of cylindrical/radial, you may use the Guide\_channeled and the Guide\_gravity components.
