--- a/trunk/divpos_monitor.tex
+++ b/trunk/divpos_monitor.tex
@@ -19,7 +19,7 @@ as well as
 three two-dimensional arrays of counts: $n(x,\eta_{\rm h}),
 I(x,\eta_{\rm h}), M_2(x,\eta_{\rm h})$.
 The arrays are written to a file and can be read e.g. by the tool
-{\bf MC\_plot}, see the system manual.
+{\bf mcplot}, see the system manual.
 
 This component can be used for measuring acceptance diagrams \cite{Cussen03}.
 {\bf PSD\_monitor} can easily be changed into being sensitive
