--- a/trunk/guide.tex
+++ b/trunk/guide.tex
@@ -9,7 +9,7 @@ in section~\ref{s:mirror}.
 \section{Mirror: The single mirror}
 \label{s:mirror}
 \index{Optics!Mirror plane}
-\component{Mirror}{System}{$l$, $h$, $m$}{$R_0, Q_c, W, \alpha$}{validated, no gravitation support}
+\component{Mirror}{System}{$l$, $h$, $m$}{$R_0, Q_c, W, \alpha, reflect$}{validated, no gravitation support}
 
 The component {\bf Mirror}
 models a single rectangular neutron mirror plate. It can be used
@@ -63,6 +63,8 @@ figure~\ref{f:reflectivity}.
 
 It is {\bf important} to notice that when $m < 1$, the reflectivity remains constant at $R=R_0$ up to $q=Qc$, and \emph{not} $m.Q_c$. This means that $m < 1$ parameters behave like $m=1$ materials.
 
+Alternatively, the Mirror, Guide and Guide\_gravity components may use a reflectivity table $reflect$, which 1st column is q [$\AA^{-1}$] and 2nd column as the reflectivity $R$ in [0-1]. For this purpose, we provide $m=2$ and $m=3$ reflectivity files from SwissNeutronics (\verb+supermirror_m2.rfl+ and \verb+supermirror_m3.rfl+ in \verb+MCSTAS/lib/data/+).
+
 \subsection{Algorithm}
 The function of the component can be described as
 \begin{enumerate}
@@ -96,7 +98,7 @@ $ W=1/300$~\AA$^{-1}$.
 \section{Guide: The guide section}
 \index{Optics!Straight guide}
 
-\component{Guide}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $m$}{$R_0, Q_c, W, \alpha$}{validated, no gravitation support}
+\component{Guide}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $m$, $reflect$}{$R_0, Q_c, W, \alpha$}{validated, no gravitation support}
 
 The component {\bf Guide}
 models a guide tube consisting of four flat mirrors. The
@@ -106,11 +108,11 @@ $(w_1,h_1)$ and placed at $z=0$. The exit is of dimensions $(w_2,h_2)$
 and is placed at $z=l$ where $l$ is the guide length. See
 figure~\ref{f:guide}.
 The reflecting properties are given by the values of
-$R_0, m, Q_c, W$, and $\alpha$, as for {\bf Mirror}.
+$R_0, m, Q_c, W$, and $\alpha$, as for {\bf Mirror}, or alternatively from the reflectivity file $reflect$.
 
 {\bf Guide} may produce wrong results with gravitation support.
-Use {\bf Guide\_gravity} (section \ref{s:guide_gravity}) in this case.
-For a more general guide simulation, see {\bf Guide\_channeled}
+Use {\bf Guide\_gravity} (section \ref{s:guide_gravity}) in this case,
+or the {\bf Guide\_channeled}
 in section~\ref{s:channeled_guide}.
 
 \begin{figure}
@@ -258,7 +260,9 @@ This component is a variation of {\bf Guide\_channeled}
 (section \ref{s:channeled_guide}) with the ability to handle
 gravitation effects and functional channeled focusing geometry.
 Channels can be specified in two dimensions,
-producing a 2D array ($k, k_h$) on smaller guide channels.
+producing a 2D array ($k, k_h$) of smaller rectangular guide channels.
+
+The coating is specified as for the Guide and Mirror components by mean of the parameters $R_0, m, Q_c, W$, and $\alpha$, or alternatively from the reflectivity file $reflect$.
 
 Waviness effects, supposed to be randomly distributed
 (\emph{i.e.} non-periodic waviness)
@@ -272,10 +276,12 @@ within which chamfers are taken into account.
 
 The component has also the capability to rotate at a given frequenccy in order to approximate a Fermi Chopper, including phase shift. The approximation resides in the fact that the component is considered fixed during neutron propagation inside slits. Beware that this component is then located at its entry window (not centered as the other Fermi choppers).\index{Bugs}
 
-To activate gravitation support, either select the \MCS\ gravitation support,
+To activate gravitation support, either select the \MCS\ gravitation support (\verb+mcrun --gravitation ...+ or from the Run dialog of \verb+mcgui+),
 or set the gravitation field strength $G$ (e.g. -9.81 on Earth).
 
 This component is about 50 \% slower than the \verb+Guide+ component, but has much more capabilities.
+
+A contributed version Guide\_honeycomb of this component exists with a honeycomb geometry.
 
 \section{Bender: a bender model (non polarizing)}
 \index{Optics!Bender (non polarizing)}
