--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -393,7 +393,9 @@ $\phi_x$ (in degrees) around the $x$ axis, then $\phi_y$ around the $y$ axis, an
 $\phi_z$ around the $z$ axis. Rotation may also be specified using
 \texttt{ABSOLUTE} rather than \texttt{RELATIVE}. If no rotation is
 specified, the default is $(0,0,0)$ using the same relative or absolute
-specification used in the \texttt{AT} modifier. The \emph{position} of
+specification used in the \texttt{AT} modifier. We \emph{highly} recommand to apply all rotations of an instrument description on Arm class components only, acting as goniometers, and position the optics on top of these. This usually makes it much easier to orient pieces of the instrument, and avoid positioning errors.
+
+The \emph{position} of
 a component is actually the origin of its local coordinate
 system. Usually, this is used as the input window position (e.g. for
 guide-like components), or the center position for
