--- a/trunk/powderN.tex
+++ b/trunk/powderN.tex
@@ -15,7 +15,8 @@ sample container etc.).
 
 The description of the powder comes from a file in one of the standard output formats LAZY, FULLPROF, or CRYSTALLOGRAPHICA.
 
-A usage example of this component can be found in the \verb+Neutron site/Tutorial/templateDIFF+ instrument from the \verb+mcgui+.
+A usage example of this component can be found in the \\
+\verb+Neutron site/Tutorial/templateDIFF+ instrument from the \verb+mcgui+.
 
 \subsection{Files formats: powder structures}
 
@@ -66,10 +67,10 @@ The sample has the shape of a solid cylinder, radius $r$ and height $h$ or a box
 sample of size $xwidth$x$yheight$x$zthick$. At the users choice, an inner 'hollow' can be
 specified.
 The absorption and incoherent cross sections are given by
-$\sigma_c^a$ $\sigma_i,c^s$.
+$\sigma_c^a$ and $\sigma_i^s$.
 
 The Bragg scattering from the powder,
-$\sigma_c,c^a$ is calculated from the input file, with the parameters
+$\sigma_c^s$ is calculated from the input file, with the parameters
 $Q$, $|F(Q)|^2$, and $j$ for the scattering vector, structure factor, and
 multiplicity, respectively. The volume of the unit cell is denoted $V_0$,
 while the sample packing factor is $f_{\rm pack}$.
