--- a/trunk/psd_monitor.tex
+++ b/trunk/psd_monitor.tex
@@ -10,7 +10,7 @@ The component {\bf PSD\_monitor} resembles other monitors, e.g.
 surface in the $(x,y)$-plane, where the detector window is set
 by the $x$ and $y$ input coordinates.
 The PSD monitor, though, is not sensitive to the arrival time
-of the neutron ray, but rather to its position. 
+of the neutron ray, but rather to its position.
 The rectangular monitor window, given by the $x$ and $y$
 limits is divided into $n_x \times n_y$ pixels.
 
@@ -18,4 +18,4 @@ The output from {\bf PSD\_monitor} is the integrated counts, $n, I, M_2$,
 as well as
 three two-dimensional arrays of counts: $n(x,y), I(x,y), M_2(x,y)$.
 The arrays are written to a file, \verb+filename+, and can be read e.g. by the tool
-{\bf MC\_plot}, see the system manual.
+{\bf mcplot}, see the system manual.
