--- a/trunk/source_div.tex
+++ b/trunk/source_div.tex
@@ -12,7 +12,7 @@ of the beam is uniform over the specified energy range
 $E_0 \pm \Delta E$ (in meV), or alternatively
 the wavelength range $\lambda_0 \pm \delta\lambda$ (in \AA ).
 
-The source divergencies are $\delta_h$ and $\delta_v$ (FWHM in degrees).
+The source divergences are $\delta_h$ and $\delta_v$ (FWHM in degrees).
 If the \verb+gauss+ flag is set to 0 (default),
 the divergence distribution is uniform, otherwise it is Gaussian.
 
